@@ -1,0 +1,3 @@
+(function(w, d) {
+  console.log("app.js");
+})(window, document);
